@@ -21,7 +21,7 @@ Version bump guide:
   `------------- Denotes a client rewrite.
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.14.2.73 2004/06/20 18:31:08 kakace Exp $
+Version change log: $Id: CHANGES.txt,v 1.14.2.74 2004/06/22 15:38:43 snikkel Exp $
 ==========================================================================
 
 2.9000
@@ -36,6 +36,7 @@ Version change log: $Id: CHANGES.txt,v 1.14.2.73 2004/06/20 18:31:08 kakace Exp 
             fix: ppc: Select core #5 on PPC 601 (#3685)
             fix: macosx: Now recognize PPC 750FX (#3675)
             fix: macosx: No longer read the TAU on G4/G5.
+            imp: solaris: Identify SPARC64-IV/US-IV (#3693)
 
 2.9008-491  chg: all: Disabled OGR (Phase 1) contest
             fix: all: Client didn't stop as instructed (#3672)
